# just-grok-it

./: LICENSE  README.md  pyproject.toml
examples/: README.md  async_example.py  basic_anthropic.py  basic_gemini.py  basic_openai.py  debug_logging.py  multi_provider.py  openrouter_migration.py  streaming.py
local_testing/: .gitignore  README.md  check_anthropic.py  check_cohere.py  check_gemini.py  check_mistral.py  check_openai.py  check_openrouter.py  run_all_checks.py
src/just_grok_it/: __init__.py  _base.py  _constants.py  _patcher.py
src/just_grok_it/_converters/: __init__.py  anthropic_converter.py  cohere_converter.py  gemini_converter.py  mistral_converter.py
src/just_grok_it/providers/: __init__.py  anthropic_provider.py  cohere_provider.py  gemini_provider.py  mistral_provider.py  openai_provider.py  openrouter_provider.py
tests/: __init__.py  test_common.py
tests/anthropic/: test_anthropic_provider.py
tests/cohere/: __init__.py  test_cohere_provider.py
tests/gemini/: __init__.py  test_gemini_provider.py
tests/integration/: __init__.py  conftest.py  mock_server.py  test_anthropic_integration.py  test_openai_integration.py
tests/mistral/: __init__.py  test_mistral_provider.py
tests/openai/: test_openai_provider.py
tests/openrouter/: __init__.py  test_openrouter_provider.py
